--- a/jokedisplay/src/main/res/layout/fragment_joke.xml
+++ b/jokedisplay/src/main/res/layout/fragment_joke.xml
@@ -10,8 +10,19 @@
 
     <TextView
         android:id="@+id/joke_textview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:text="@string/missing_joke" />
+
+    <TextView
+        android:id="@+id/credits_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/missing_joke" />
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:text="@string/credits_string" />
 
 </RelativeLayout>
